--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/font": "^13.4.1",
     "autoprefixer": "10.4.14",
+    "embla-carousel-react": "^8.0.0-rc03",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.1",
     "mongoose": "^7.1.1",
@@ -17,6 +19,7 @@
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-responsive-carousel": "^3.2.23",
     "tailwindcss": "3.3.2",
     "use-shopping-cart": "^3.1.7"
   },
