--- a/proiect-final/package.json
+++ b/proiect-final/package.json
@@ -1,6 +1,6 @@
 {
   "name": "proiect-final",
-  "source":"/index.js",
+  "source": "/index.js",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -17,5 +17,8 @@
     "react": "18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "18.2.0"
+  },
+  "devDependencies": {
+    "push-dir": "^0.4.1"
   }
 }
