--- a/travel/package.json
+++ b/travel/package.json
@@ -11,6 +11,9 @@
   "dependencies": {
     "next": "13.4.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "@emailjs/browser": "^3.11.0",
+    "@react-icons/all-files": "^4.1.0",
+    "react-icons": "^4.8.0"
   }
 }
