--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@supabase/auth-ui-react": "^0.3.5",
     "@supabase/auth-ui-shared": "^0.1.3",
     "@supabase/supabase-js": "^2.20.0",
+    "dayjs": "^1.11.7",
     "next": "^13.3.0",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
