--- a/client/package.json
+++ b/client/package.json
@@ -12,13 +12,18 @@
     "@headlessui/react": "^1.7.14",
     "axios": "^1.4.0",
     "classnames": "^2.3.2",
+    "framer-motion": "^10.12.10",
+    "mongoose": "^7.1.1",
     "next": "13.4.1",
+    "randomstring": "^1.2.3",
     "react": "18.2.0",
     "react-cookie": "^4.1.1",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
+    "react-loading-icons": "^1.1.0",
     "react-toastify": "^9.1.2",
-    "sass": "^1.62.1"
+    "sass": "^1.62.1",
+    "slugify": "^1.6.6"
   },
   "devDependencies": {
     "@types/node": "^18.16.3",
