--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next-tools/dynamic": "^0.0.11",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "embla-carousel-react": "^8.0.0-rc03",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.1",
+    "js-cookie": "^3.0.5",
     "mongoose": "^7.1.1",
     "next": "13.4.1",
     "postcss": "8.4.23",
